--- a/desktop/package.json
+++ b/desktop/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-less": "~0.10.0",
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-yuidoc": "~0.5.2",
     "grunt-mocha": "~0.4.10",
     "http-proxy": "~1.1.4",
     "husky": "~0.6.0",
