Resetting bower.json

--- a/bower.json
+++ b/bower.json
@@ -47,8 +47,5 @@
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "angular": ">=1.0.6"
-  }
+  "devDependencies": {}
 }
