--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,8 @@
     "FileSaver": "*",
     "elasticsearch": "*",
     "bluebird": "~2.1.3",
-    "lesshat": "~3.0.2"
+    "lesshat": "~3.0.2",
+    "Faker": "~1.1.0"
   },
   "devDependencies": {}
 }
