--- a/bower.json
+++ b/bower.json
@@ -20,32 +20,32 @@
     "tests"
   ],
   "dependencies": {
-    "requirejs": "~2.1.10",
     "angular": "~1.2.14",
-    "lodash": "~2.4.1",
-    "d3": "~3.4.8",
-    "angular-route": "~1.2.14",
-    "gridster": "~0.5.0",
-    "angular-mocks": "~1.2.14",
-    "font-awesome": "~4.0.3",
-    "requirejs-text": "~2.0.10",
-    "async": "~0.2.10",
-    "bootstrap": "~3.1.1",
-    "jquery": "~2.1.0",
-    "moment": "~2.5.1",
-    "require-css": "~0.1.2",
-    "angular-bootstrap": "~0.10.0",
-    "jsonpath": "*",
-    "moment-timezone": "~0.0.3",
     "angular-bindonce": "~0.3.1",
-    "angular-ui-ace": "bower",
+    "angular-bootstrap": "~0.10.0",
     "angular-elastic": "~2.3.3",
-    "inflection": "~1.3.5",
-    "FileSaver": "*",
-    "elasticsearch": "*",
+    "angular-mocks": "~1.2.14",
+    "angular-route": "~1.2.14",
+    "angular-ui-ace": "bower",
+    "async": "~0.2.10",
     "bluebird": "~2.1.3",
+    "bootstrap": "~3.1.1",
+    "d3": "~3.4.8",
+    "elasticsearch": "*",
+    "Faker": "~1.1.0",
+    "FileSaver": "*",
+    "font-awesome": "~4.0.3",
+    "gridster": "~0.5.0",
+    "inflection": "~1.3.5",
+    "jquery": "~2.1.0",
+    "jsonpath": "*",
     "lesshat": "~3.0.2",
-    "Faker": "~1.1.0"
+    "lodash": "~2.4.1",
+    "moment": "~2.5.1",
+    "moment-timezone": "~0.0.3",
+    "require-css": "~0.1.2",
+    "requirejs": "~2.1.10",
+    "requirejs-text": "~2.0.10"
   },
   "devDependencies": {}
 }
