--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -38,6 +38,13 @@
                 <lucene.version>4.8.1</lucene.version>
             </properties>
         </profile>
+        <profile>
+            <id>ES_1.3.2</id>
+            <properties>
+                <elasticsearch.version>1.3.2</elasticsearch.version>
+                <lucene.version>4.9.0</lucene.version>
+            </properties>
+        </profile>
     </profiles>
 
     <properties>
