Adding --version and fixing the config and command line options

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-mocha": "~0.4.10",
+    "grunt-replace": "^0.7.9",
     "grunt-run": "^0.2.3",
     "http-proxy": "~1.1.4",
     "husky": "~0.6.0",
