attempt to modify when hipchat notifications are sent

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ notifications:
     rooms:
       secure: a2FERvICecrUAR62vP4vrUCTG3haRzf6kSzDDzGu6SICEXWLRrK0xeNQDpdwDAfzFmaIJ6txpkmInvEFeNPYNngTgEDyfhqdIa/lW0Ermdg+1hL0dK6QJiVmT1V6LDB2mgtaTTmfontxJqq7P2tmr0zz8ny4Eqq3lUnwPxYFNNo=
     template:
-      - '%{repository}/%{branch} #%{build_number} by %{author}): %{message} (<a href="%{build_url}">open</a>)'
+      - '%{repository}/%{branch} #%{build_number} by %{author}: %{message} (<a href="%{build_url}">open</a>)'
     format: html
+    on_success: change
+    on_failure: always
