--- a/desktop/package.json
+++ b/desktop/package.json
@@ -37,7 +37,7 @@
     "tar": "^1.0.1"
   },
   "scripts": {
-    "test": "grunt test",
+    "test": "grunt test --use-jruby",
     "server": "grunt server",
     "precommit": "grunt jshint todos"
   },
