--- a/desktop/package.json
+++ b/desktop/package.json
@@ -30,6 +30,7 @@
     "lodash": "~2.4.1",
     "mkdirp": "^0.5.0",
     "mocha": "~1.20.1",
+    "mocha-screencast-reporter": "~0.1.4",
     "path-browserify": "0.0.0",
     "progress": "^1.1.8",
     "request": "^2.40.0",
