--- a/desktop/package.json
+++ b/desktop/package.json
@@ -23,11 +23,14 @@
     "grunt-replace": "^0.7.9",
     "grunt-run": "^0.2.3",
     "grunt-saucelabs": "~8.3.2",
+    "html-entities": "^1.1.1",
     "http-proxy": "~1.1.4",
     "husky": "~0.6.0",
     "istanbul": "~0.2.4",
     "load-grunt-config": "~0.7.0",
     "lodash": "~2.4.1",
+    "marked": "^0.3.2",
+    "marked-text-renderer": "^0.1.0",
     "mkdirp": "^0.5.0",
     "mocha": "~1.20.1",
     "mocha-screencast-reporter": "~0.1.4",
