fixed an x-axis bug when switching from ordinal/nominal to time scales

--- a/.esvmrc
+++ b/.esvmrc
@@ -1,6 +1,6 @@
 {
   "defaults": {
     "branch": "1.x",
-    "plugins": ["elasticsearch/marvel/latest"]
+    "plugins": ["elasticsearch/marvel/latest", "mobz/elasticsearch-head"]
   }
 }
