--- a/desktop/package.json
+++ b/desktop/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "test": "grunt test --use-jruby",
     "server": "grunt server",
-    "precommit": "grunt jshint render_readme"
+    "precommit": "grunt jshint"
   },
   "repository": {
     "type": "git",
