--- a/desktop/package.json
+++ b/desktop/package.json
@@ -39,7 +39,8 @@
     "request": "^2.40.0",
     "requirejs": "~2.1.14",
     "rjs-build-analysis": "0.0.3",
-    "tar": "^1.0.1"
+    "tar": "^1.0.1",
+    "grunt-s3": "~0.2.0-alpha.3"
   },
   "scripts": {
     "test": "grunt test --use-jruby",
