Updating esvm to the latest version

--- a/.esvmrc
+++ b/.esvmrc
@@ -1,6 +1,6 @@
 {
   "defaults": {
-    "branch": "1.x",
+    "version": "^1.4",
     "plugins": ["elasticsearch/marvel/latest", "mobz/elasticsearch-head"]
   }
 }
