Change kibana-int to be .kibana, closes #1575

--- a/desktop/src/server/config/kibana.yml
+++ b/desktop/src/server/config/kibana.yml
@@ -6,7 +6,7 @@ elasticsearch: "http://localhost:9200"
 
 # Kibana uses an index in Elasticsearch to store saved searches, visualizations
 # and dashboards. It will create an new index if it doesn't already exist.
-kibanaIndex: "kibana-int"
+kibanaIndex: ".kibana"
 
 # Applications loaded and included into Kibana. Use the settings below to
 # customize the applications and thier names.
