--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular": "~1.2.14",
     "angular-bindonce": "~0.3.1",
     "angular-bootstrap": "~0.10.0",
+    "angular-chosen-localytics": "~1.0.6",
     "angular-elastic": "~2.3.3",
     "angular-mocks": "~1.2.14",
     "angular-route": "~1.2.14",
