--- a/bower.json
+++ b/bower.json
@@ -39,14 +39,14 @@
     "inflection": "~1.3.5",
     "jquery": "~2.1.0",
     "jsonpath": "*",
-    "leaflet": "~0.7.3",
     "lesshat": "~3.0.2",
     "lodash": "~2.4.1",
     "moment": "~2.5.1",
     "moment-timezone": "~0.0.3",
     "require-css": "~0.1.2",
     "requirejs": "~2.1.10",
-    "requirejs-text": "~2.0.10"
+    "requirejs-text": "~2.0.10",
+    "mapbox.js": "~2.1.1"
   },
   "devDependencies": {}
 }
