--- a/bower.json
+++ b/bower.json
@@ -42,6 +42,8 @@
     "inflection": "~1.3.5",
     "jquery": "~2.1.0",
     "jsonpath": "*",
+    "leaflet": "0.7.3",
+    "lesshat": "~3.0.2",
     "lesshat": "~3.0.2",
     "leaflet.markercluster": "~0.4.0",
     "lodash": "~2.4.1",
