--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kibana",
   "private": true,
-  "version": "4.0.0-BETA2-SNAPSHOT",
+  "version": "4.0.0-BETA2",
   "description": "Kibana 4",
   "main": "Gulpfile.js",
   "dependencies": {},
