Test: re-wrote testHostFailureChecksTemplate to be more resilient
Also hard coded log level to TRACE to make it work in maven as well.

--- a/agent/src/test/resources/log4j.properties
+++ b/agent/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
-es.logger.level=TRACE
-log4j.rootLogger=${es.logger.level}, out
+es.logger.level=DEBUG
+log4j.rootLogger=TRACE, out
 
 log4j.logger.org.apache.http=INFO, out
 log4j.additivity.org.apache.http=false
