--- a/agent/src/test/resources/log4j.properties
+++ b/agent/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 es.logger.level=DEBUG
-log4j.rootLogger=TRACE, out
+log4j.rootLogger=${es.logger.level}, out
 
 log4j.logger.org.apache.http=INFO, out
 log4j.additivity.org.apache.http=false
