Changing kibanaIndex and defaultAppId to their respective snake_case

--- a/desktop/src/server/config/kibana.yml
+++ b/desktop/src/server/config/kibana.yml
@@ -9,10 +9,10 @@ elasticsearch: "http://localhost:9200"
 
 # Kibana uses an index in Elasticsearch to store saved searches, visualizations
 # and dashboards. It will create a new index if it doesn't already exist.
-kibanaIndex: ".kibana"
+kibana_index: ".kibana"
 
 # The default application to load.
-defaultAppId: "discover"
+default_app_id: "discover"
 
 # Time in seconds to wait for responses from the back end or elasticsearch.
 # Note this should always be higher than "shard_timeout".
