--- a/desktop/config/kibana.yml
+++ b/desktop/config/kibana.yml
@@ -18,7 +18,7 @@
 # The default application to load.
 # kibana.defaultAppId: "discover"
 
-# If your Elasticsearch is protected with basic auth, this is the user credentials
+# If your Elasticsearch is protected with basic auth, these are the user credentials
 # used by the Kibana server to perform maintenance on the kibana_index at startup. Your Kibana
 # users will still need to authenticate with Elasticsearch (which is proxied through
 # the Kibana server)
