--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "pegjs": "~0.8.0",
-    "flot": "~0.8.3"
+    "flot": "~0.8.3",
+    "angular-sortable-view": "~0.0.13"
   }
 }
