--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timelion",
-  "version": "0.1.168",
+  "version": "0.1.171",
   "dependencies": {
     "body-parser": "^1.12.0",
     "boom": "^2.8.0",
@@ -11,6 +11,7 @@
     "pegjs": "^0.9.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.2.16",
     "babel-eslint": "^4.1.4",
     "bluebird": "^3.0.5",
     "chai": "^3.2.0",
@@ -25,7 +26,8 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.0",
     "rimraf": "^2.4.3",
-    "rsync": "^0.4.0"
+    "rsync": "^0.4.0",
+    "yargs": "^3.29.0"
   },
   "scripts": {
     "test": "mocha --compilers js:babel/register series_functions/__test__/*.js"
