--- a/desktop/package.json
+++ b/desktop/package.json
@@ -97,6 +97,7 @@
     "good-squeeze": "2.1.0",
     "gridster": "0.5.6",
     "hapi": "8.8.1",
+    "heapdump": "0.3.7",
     "imports-loader": "0.6.4",
     "jade": "1.11.0",
     "jade-loader": "0.7.1",
