--- a/desktop/package.json
+++ b/desktop/package.json
@@ -130,6 +130,7 @@
     "whatwg-fetch": "0.9.0"
   },
   "devDependencies": {
+    "@spalger/test-subj-selector": "0.2.0",
     "Nonsense": "0.1.2",
     "angular-mocks": "1.4.7",
     "auto-release-sinon": "1.0.3",
