--- a/desktop/package.json
+++ b/desktop/package.json
@@ -53,7 +53,9 @@
     "karma": "karma start",
     "elasticsearch": "grunt esvm:dev:keepalive",
     "lint": "grunt eslint:source",
-    "lintroller": "grunt eslint:fixSource"
+    "lintroller": "grunt eslint:fixSource",
+    "mocha": "mocha --compilers js:babel/register",
+    "mocha:debug": "mocha --debug-brk --compilers js:babel/register"
   },
   "repository": {
     "type": "git",
